--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "start": "ts-node src/index.ts"
+    "start": "ts-node src/index.ts",
+    "test": "vitest"
   },
   "license": "MIT",
   "keywords": [
@@ -28,6 +29,7 @@
   },
   "dependencies": {
     "axios": "^1.10.0",
-    "cheerio": "^1.1.0"
+    "cheerio": "^1.1.0",
+    "vitest": "^3.2.4"
   }
 }
